Create DB Table from Coading.

--- a/cruddemo/src/main/resources/application.properties
+++ b/cruddemo/src/main/resources/application.properties
@@ -7,3 +7,10 @@ spring.main.banner-mode=off
 
 #Reduce logging level
 logging.level.root=warn
+
+#Longin config to display SQL Statement 
+logging.level.org.hibernate.sql=debug
+logging.level.org.hibernate.orm.jdbc.bind=trace
+
+#Configure JPA/Hibernate to auto create the table
+spring.jpa.hibernate.ddl-auto=update
